# AttractionEditor

./: .gitignore  README.md  pyproject.toml
src/attraction_editor/: main.py
src/attraction_editor/model/: project.py
src/attraction_editor/palette/: colour_ramps.json  remap.py  standard_palette.json
src/attraction_editor/sprites/: manifest.py  scanner.py  validate.py
src/attraction_editor/ui/: anchor_editor_panel.py  animation_panel.py  animation_player_panel.py  build_panel.py  collapsible_section.py  colour_preview_panel.py  colour_swatch_picker.py  layers_panel.py  main_window.py  motion_editor_panel.py  pil_qt.py  preview_widget.py  program_editor_panel.py  project_panel.py  ride_object_panel.py  sprite_browser_panel.py
tests/: conftest.py  test_anchor_editor_panel.py  test_animation_panel.py  test_animation_player_panel.py  test_build_panel.py  test_collapsible_section.py  test_colour_preview_panel.py  test_colour_swatch_picker.py  test_compositing.py  test_dither.py  test_handoff.py  test_layers.py  test_layers_panel.py  test_main_window.py  test_manifest.py  test_motion.py  test_motion_editor_panel.py  test_object_json.py  test_package.py  test_preview_widget.py  test_program_editor_panel.py  test_project.py  test_project_panel.py  test_remap.py  test_ride_object_panel.py  test_scanner.py  test_sprite_builder.py  test_thumbnail.py  test_validate.py  test_zone_mask.py
tests/fixtures/: synthetic.py  tilt_a_whirl.py
tools/: extract_palette.py
